Fixed jump scrolling with js

--- a/style.css
+++ b/style.css
@@ -619,3 +619,7 @@ textarea.datalist {
 td > label {
     white-space: nowrap;
 }
+
+.highlight {
+    border: thin solid yellow;
+}
